--- a/ParkingLotApi/appsettings.json
+++ b/ParkingLotApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ParkingLotStoreDatabase": {
+    "ConnectionStrings": "mongodb://163.184.56.96:27017",
+    "DataBaseName": "ParkingLot",
+    "CollectionName": "ParkingLot"
+  }
+ 
 }
