--- a/ParkingLotApi/appsettings.json
+++ b/ParkingLotApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ParkingLotStoreDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DataBaseName": "ParkingLot",
+    "CollectionName": "ParkingLot"
+  }
 }
